# HARC

./: .gitignore  CMakeLists.txt  README.md  nrf54l15dk_nrf54l05_cpuapp.overlay  prj.conf
.claude/: settings.local.json
debug_build/: .ninja_deps  .ninja_log  .vscode-nrf-connect.json  CMakeCache.txt  build.ninja  build_info.yml  cmake_install.cmake  compile_commands.json  sysbuild_modules.txt  zephyr_modules.txt  zephyr_settings.txt
debug_build/Kconfig/: Kconfig.dts  Kconfig.modules
debug_build/zephyr/: .cmake.dotconfig.checksum  .config  .config.old  cmake_install.cmake  edt.pickle  edt.pickle.cmake  generated_nrfutil_batch.json  isr_tables.c  linker.cmd  linker.cmd.dep  linker_zephyr_pre0.cmd  linker_zephyr_pre0.cmd.dep  runners.yaml  snippets_generated.cmake  syscall_weakdefs_llext.c  zephyr.dts  zephyr.dts.d  zephyr.dts.pre  zephyr.hex  zephyr.map  zephyr.stat  zephyr_pre0.map
documents_misc/charts_and_diagrams/: app_state.mmd  bas_discovery_callbacks_part1.mmd  bas_discovery_callbacks_part2.mmd  bas_read_att.mmd  bas_read_cb.mmd  battery_discover.mmd  ble_arch.mmd  ble_cmd_complete.mmd  bond_collect_meta.mmd  (+13 more)
src/: app_controller.c  app_controller.h  bas_settings.c  battery_reader.c  battery_reader.h  ble_manager.c  ble_manager.h  button_manager.c  connection_strategy.c  connection_strategy.h  csip.c  csip.h  csip_coordinator.c  csip_coordinator.h  devices_manager.c  devices_manager.h  display_manager.c  display_manager.h  has_controller.c  has_controller.h  main.c  nrf52dk_nrf52832.overlay  power_manager.c  vcp_controller.c  vcp_controller.h  vcp_settings.c
(+181 files in other folders)
